k8s-manifests/edu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edu-doc-compare
spec:
  selector:
    app: edu-doc-compare
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
