k8s-manifests/edu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edu-doc-compare-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: edu.cluster.k8s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edu-doc-compare
            port:
              number: 8000
